made this compile in jdk 1.3.  The Boolean.valueOf directive is only Keywords: cscvs:MAIN-249
Author: knitterb
Date: 2003/07/31 21:44:39
available in jdk 1.4 and later

imported from: dustin@spy.net--java/spyjar--sfcvs--1.0--patch-249